parallel compilation wip - use virtual threads